--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
     justify-content: center;
 }
 
+/* rivestimento delle informazioni del biglietto */
 .card{
     width: 100%;
     border-radius: 10px;
@@ -25,4 +26,14 @@
 .flex{
     display: flex;
     gap:40px;
+}
+
+
+/* sezione di display costo biglietto */
+.output_ticket{
+    display: none;
+}
+
+.show{
+    display: block;
 }
