--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 .container{
     width: 100%;
     height: 100vh;
+    background-color: brown;
 }
 
 .row{
@@ -16,16 +17,45 @@
     justify-content: center;
 }
 
+/* titolo */
+h1{
+    color: white;
+    padding: 30px;
+}
+
 /* rivestimento delle informazioni del biglietto */
 .card{
     width: 100%;
     border-radius: 10px;
     background-color: white;
+    padding: 20px 50px;
+    box-shadow: 1px 1px 5px black;
+    color: brown;
+    text-align: center;
 }
 
+/* metto il form in flex */
 .flex{
     display: flex;
     gap:40px;
+}
+
+/* allineo titolo e inserimento del dato */
+.flex div{
+    text-align: center;
+}
+
+/* metto dei padding */
+label{
+    display: block;
+    padding-bottom: 10px;
+}
+
+button{
+    margin: 30px 10px 0;
+    color: brown;
+    font-size: 18px;
+    padding: 5px 10px;
 }
 
 
