--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,15 @@
 }
 
 
-.container{
-    width: 100%;
-    height: 100vh;
+
+#ticket_to_ride{
     background-color: brown;
+}
+
+.container{
+    width: 80%;
+    margin: 0 auto;
+    height: 100vh;
 }
 
 .row{
@@ -17,8 +22,13 @@
     justify-content: center;
 }
 
+.col{
+    width: 100%;
+    text-align: center;
+}
+
 /* titolo */
-h1{
+h1, h2{
     color: white;
     padding: 30px;
 }
@@ -37,7 +47,7 @@ h1{
 /* metto il form in flex */
 .flex{
     display: flex;
-    gap:40px;
+    justify-content: space-around;
 }
 
 /* allineo titolo e inserimento del dato */
@@ -58,6 +68,33 @@ button{
     padding: 5px 10px;
 }
 
+/* sezione IL TUO BIGLIETTO */
+h2{
+    font-size: 36px;
+}
+
+.ticket{
+    background-color: white;
+    text-align: start;
+    padding: 15px;
+}
+
+/* costum della tabella */
+table{
+    width: 100%;
+    border: 2px solid gray;
+    border-right: none;
+    border-collapse: collapse;
+}
+
+th, td{
+    text-align: start;
+    padding: 20px;
+}
+
+.user_name{
+    background-color: gray;
+}
 
 /* sezione di display costo biglietto */
 .output_ticket{
